--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UIHelpPlatformToolbarPortlet/UIHelpPlatformToolbarPortlet_it.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UIHelpPlatformToolbarPortlet/UIHelpPlatformToolbarPortlet_it.xml
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <bundle>
+    <UIHelpPlatformToolbarPortlet>
+        <label>
+            Help
+        </label>
+    </UIHelpPlatformToolbarPortlet>
 
 </bundle>
