--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UIHelpPlatformToolbarPortlet/UIHelpPlatformToolbarPortlet_fr.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UIHelpPlatformToolbarPortlet/UIHelpPlatformToolbarPortlet_fr.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <bundle>
     <UIHelpPlatformToolbarPortlet>
-        <label>
+        <Title>
             Help
-        </label>
+        </Title>
     </UIHelpPlatformToolbarPortlet>
 
 </bundle>
