PLF-3858: implement POC for helpPortlet: update resource bundle

--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UIHelpPlatformToolbarPortlet/UIHelpPlatformToolbarPortlet_it.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UIHelpPlatformToolbarPortlet/UIHelpPlatformToolbarPortlet_it.xml
@@ -2,7 +2,7 @@
 <bundle>
     <UIHelpPlatformToolbarPortlet>
         <Title>
-            Help
+            aiuto
         </Title>
     </UIHelpPlatformToolbarPortlet>
 
