--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISetupPlatformToolBarPortlet/UISetupPlatformToolBarPortlet_fr.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISetupPlatformToolBarPortlet/UISetupPlatformToolBarPortlet_fr.xml
@@ -16,7 +16,8 @@
 			<portalnavigation>Sites</portalnavigation>
 			<servicesManagement>Gestion</servicesManagement>
 			<monitoring>Surveillance</monitoring>
-			<ide>IDE</ide>
+			<spaces>Espaces</spaces>
+			<Branding>Branding</Branding>
 		</label>
 	</UISetupPlatformToolBarPortlet>
 </bundle>
