--- a/extension/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/group/platform/administrators_fr.properties
+++ b/extension/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/group/platform/administrators_fr.properties
@@ -32,3 +32,5 @@ administration.groupnavigation=Navigation de Groupe
 administration.portalnavigation=Gestion des Sites
 administration.servicesManagement=Gestion
 administration.monitoring=Surveillance
+administration.Branding=Branding
+administration.spaces=Espaces
