--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISetupPlatformToolBarPortlet/UISetupPlatformToolBarPortlet_en.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISetupPlatformToolBarPortlet/UISetupPlatformToolBarPortlet_en.xml
@@ -16,7 +16,8 @@
 			<portalnavigation>Sites</portalnavigation>
 			<servicesManagement>Management</servicesManagement>
 			<monitoring>Monitoring</monitoring>
-			<ide>IDE</ide>
+			<spaces>Spaces</spaces>
+			<Branding>Branding</Branding>
 		</label>
 	</UISetupPlatformToolBarPortlet>
 </bundle>
