--- a/extension/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/group/platform/administrators_it.properties
+++ b/extension/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/group/platform/administrators_it.properties
@@ -29,3 +29,5 @@ administration.groupnavigation=Navigazione di Gruppo
 administration.portalnavigation=Gestione Siti
 administration.servicesManagement=Gestione
 administration.monitoring=Monitoraggio
+administration.Branding=Branding
+administration.spaces=Spazi
