PLF-3883 :Manage ADMIN BUTTON in top navigation Portlet.

--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISetupPlatformToolBarPortlet/UISetupPlatformToolBarPortlet.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISetupPlatformToolBarPortlet/UISetupPlatformToolBarPortlet.xml
@@ -18,6 +18,7 @@
 			<monitoring>Monitoring</monitoring>
 			<spaces>Spaces</spaces>
 			<Branding>Branding</Branding>
+			<ide>IDE</ide>
 		</label>
 	</UISetupPlatformToolBarPortlet>
 </bundle>
