--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISetupPlatformToolBarPortlet/UISetupPlatformToolBarPortlet_it.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISetupPlatformToolBarPortlet/UISetupPlatformToolBarPortlet_it.xml
@@ -18,6 +18,7 @@
 			<monitoring>Monitoraggio</monitoring>
 			<spaces>Spazi</spaces>
 			<Branding>Branding</Branding>
+			<ide>IDE</ide>
 		</label>
 	</UISetupPlatformToolBarPortlet>
 </bundle>
