--- a/samples/acme-intranet/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/portal/intranet.properties
+++ b/samples/acme-intranet/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/portal/intranet.properties
@@ -50,3 +50,4 @@ portal.intranet.documents=Documents
 portal.intranet.detail=Details
 portal.intranet.wiki=Wiki
 portal.intranet.wiki=Wiki
+portal.intranet.mywiki=My Wiki
