--- a/samples/acme-intranet/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/portal/intranet_fr.properties
+++ b/samples/acme-intranet/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/portal/intranet_fr.properties
@@ -47,3 +47,4 @@ UIPortalToolPanel.label.copyrightText=Copyright &copy; 2010. Tous droits réserv
 UIPortalToolPanel.label.companyTitleText= eXo Platform SAS.
 portal.intranet.detail=Détails
 portal.intranet.wiki=Wiki
+portal.intranet.mywiki=Mon Wiki
