--- a/samples/acme-intranet/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/portal/intranet_it.properties
+++ b/samples/acme-intranet/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/portal/intranet_it.properties
@@ -49,5 +49,6 @@ portal.intranet.tour=tour
 portal.intranet.documents=Documenti
 portal.intranet.detail=Dettagli
 portal.intranet.wiki=Wiki
+portal.intranet.mywiki=I Wiki
 
 UIActionBar.tooltip.DeleteNode=Elimina
