--- a/samples/acme-intranet/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/portal/intranet_vi.properties
+++ b/samples/acme-intranet/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/portal/intranet_vi.properties
@@ -47,3 +47,4 @@ portal.intranet.tour=tour
 portal.intranet.documents=Documents
 portal.intranet.detail=Details
 portal.intranet.wiki=Wiki
+portal.intranet.mywiki=vi Wiki
