--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UICompanyNavigationPortlet/UICompanyNavigationPortlet.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UICompanyNavigationPortlet/UICompanyNavigationPortlet.xml
@@ -1,6 +1,8 @@
-<bundle><UICompanyNavigationPortlet>
-    <label>
-        intranet
-    </label>
+<?xml version="1.0" encoding="UTF-8"?>
+<bundle>
+ <UICompanyNavigationPortlet>
+    <CompanyBar>
+        Company
+    </CompanyBar>
 </UICompanyNavigationPortlet>
 </bundle>
