--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UIUserNavigationPortlet/UIUserNavigationPortlet_it.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UIUserNavigationPortlet/UIUserNavigationPortlet_it.xml
@@ -1,5 +1,40 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <bundle>
     <UIUserNavigationPortlet>
-
-</UIUserNavigationPortlet>
-    </bundle>
+        <My>
+            Mes
+        </My>
+        <label>
+            <activities>
+                Activités
+            </activities>
+            <profile>
+                Profile
+            </profile>
+            <connections>
+                Connections
+            </connections>
+            <wiki>
+                Wiki
+            </wiki>
+            <dashboard>
+                Dashboard
+            </dashboard>
+            <Myactivities>
+                Mes Activités
+            </Myactivities>
+            <Myprofile>
+                Mon Profile
+            </Myprofile>
+            <Myconnections>
+                Mes Connections
+            </Myconnections>
+            <Mywiki>
+                Mon Wiki
+            </Mywiki>
+            <Mydashboard>
+                Mon Dashboard
+            </Mydashboard>
+        </label>
+    </UIUserNavigationPortlet>
+</bundle>
