--- a/samples/acme-intranet/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/portal/intranet_en.properties
+++ b/samples/acme-intranet/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/portal/intranet_en.properties
@@ -49,3 +49,4 @@ portal.intranet.tour=tour
 portal.intranet.documents=Documents
 portal.intranet.detail=Details
 portal.intranet.wiki=Wiki
+portal.intranet.mywiki=My Wiki
