--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UIGroupsNavigationPortlet/UIGroupsNavigationPortlet_en.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UIGroupsNavigationPortlet/UIGroupsNavigationPortlet_en.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <bundle>
     <UIGroupsNavigationPortlet>
-        <label>My Groups</label>
-        <manage>Manage groups</manage>
+        <label>My Groups Pages</label>
+
+        <CollapseAll>Collapse All</CollapseAll>
     </UIGroupsNavigationPortlet>
 </bundle>
