PLF-3899 :[Left Navigation] Add "Space" portlet in Left Navigation Bar

--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISpaceNavigationPortlet/UISpaceNavigationPortlet_en.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISpaceNavigationPortlet/UISpaceNavigationPortlet_en.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <bundle>
-    <UICompanyNavigationPortlet>
+    <UISpaceNavigationPortlet>
+        <label>
+            <Spaces>Spaces</Spaces>
+            <Join> Join a space</Join>
+        </label>
 
-    </UICompanyNavigationPortlet>
+    </UISpaceNavigationPortlet>
 </bundle>
