--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISpaceNavigationPortlet/UISpaceNavigationPortlet_it.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISpaceNavigationPortlet/UISpaceNavigationPortlet_it.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <bundle>
     <UISpaceNavigationPortlet>
+        <label>
+            <Spaces>Espaces</Spaces>
+            <Join>Joindre un espace</Join>
+        </label>
 
     </UISpaceNavigationPortlet>
 </bundle>
