PLF-3933 : [Top Navigation][Search Portlet] Add internationalization for the search label

--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISearchPlatformToolbarPortlet/UISearchPlatformToolbarPortlet_it.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISearchPlatformToolbarPortlet/UISearchPlatformToolbarPortlet_it.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <bundle>
-    <UIHelpPlatformToolbarPortlet>
-        <Title>
-            Ricerca
-        </Title>
-    </UIHelpPlatformToolbarPortlet>
+    <UISearchPlatformToolbarPortlet>
+        <Search>
+            Ricerca:
+        </Search>
+    </UISearchPlatformToolbarPortlet>
 
 </bundle>
