--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISearchPlatformToolbarPortlet/UISearchPlatformToolbarPortlet.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISearchPlatformToolbarPortlet/UISearchPlatformToolbarPortlet.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <bundle>
-    <UIHelpPlatformToolbarPortlet>
-        <Title>
-            Search
-        </Title>
-    </UIHelpPlatformToolbarPortlet>
+    <UISearchPlatformToolbarPortlet>
+        <Search>
+            Search:
+        </Search>
+    </UISearchPlatformToolbarPortlet>
 
 </bundle>
