PLF-3921 : [Left Navigation][Space Navigation Portlet] Implement search inside space list [ 1- Add service to search for spaces using a criteria 2- Add js effect to display spaces ]

--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISpaceNavigationPortlet/UISpaceNavigationPortlet.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISpaceNavigationPortlet/UISpaceNavigationPortlet.xml
@@ -3,8 +3,11 @@
  <UISpaceNavigationPortlet>
      <label>
          <Spaces>Spaces</Spaces>
-         <Join> Join a space</Join>
+         <Join>Join a space</Join>
      </label>
+     <msg>
+         <filter-spaces>Filter spaces</filter-spaces>
+     </msg>
 
 </UISpaceNavigationPortlet>
 </bundle>
