--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISpaceNavigationPortlet/UISpaceNavigationPortlet_it.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISpaceNavigationPortlet/UISpaceNavigationPortlet_it.xml
@@ -5,6 +5,8 @@
             <Spaces>Espaces</Spaces>
             <Join>Joindre un espace</Join>
         </label>
-
+        <msg>
+            <filter-spaces>Filter spaces</filter-spaces>
+        </msg>
     </UISpaceNavigationPortlet>
 </bundle>
