--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UIGroupsNavigationPortlet/UIGroupsNavigationPortlet_it.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UIGroupsNavigationPortlet/UIGroupsNavigationPortlet_it.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <bundle>
     <UIGroupsNavigationPortlet>
-        <label>My Groups</label>
-        <manage>Manage groups</manage>
+        <label>Group</label>
     </UIGroupsNavigationPortlet>
 </bundle>
