PLF-3945 :[Top Navigation][Admin Portlet] Add "Search" entry

--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISetupPlatformToolBarPortlet/UISetupPlatformToolBarPortlet_fr.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISetupPlatformToolBarPortlet/UISetupPlatformToolBarPortlet_fr.xml
@@ -19,6 +19,7 @@
 			<spaces>Espaces</spaces>
 			<Branding>Branding</Branding>
 			<ide>IDE</ide>
+			<search>Recherche</search>
 		</label>
 	</UISetupPlatformToolBarPortlet>
 </bundle>
