--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISetupPlatformToolBarPortlet/UISetupPlatformToolBarPortlet_it.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISetupPlatformToolBarPortlet/UISetupPlatformToolBarPortlet_it.xml
@@ -19,6 +19,7 @@
 			<spaces>Spazi</spaces>
 			<Branding>Branding</Branding>
 			<ide>IDE</ide>
+			<search>Search</search>
 		</label>
 	</UISetupPlatformToolBarPortlet>
 </bundle>
