--- a/extension/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/group/platform/administrators.properties
+++ b/extension/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/group/platform/administrators.properties
@@ -31,4 +31,5 @@ administration.servicesManagement=Management
 administration.monitoring=Monitoring
 administration.Branding=Branding
 administration.spaces=Spaces
+administration.search=Search
 
