--- a/extension/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/group/platform/administrators_fr.properties
+++ b/extension/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/group/platform/administrators_fr.properties
@@ -34,3 +34,4 @@ administration.servicesManagement=Gestion
 administration.monitoring=Surveillance
 administration.Branding=Branding
 administration.spaces=Espaces
+administration.search=Recherche
