--- a/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISetupPlatformToolBarPortlet/UISetupPlatformToolBarPortlet.xml
+++ b/extension/portlets/platformNavigation/src/main/resources/locale/portlet/UISetupPlatformToolBarPortlet/UISetupPlatformToolBarPortlet.xml
@@ -8,7 +8,7 @@
 			<wcmAdmin>Content administration</wcmAdmin>
 			<users>Users</users>
 			<newStaff>Add Users</newStaff>
-			<org-management>Group and Roles</org-management>
+			<org-management>Groups and Roles</org-management>
 			<portal>Portal</portal>
 			<administration>Administration</administration>
 			<groupnavigation>Group Sites</groupnavigation>
@@ -19,6 +19,7 @@
 			<spaces>Spaces</spaces>
 			<Branding>Branding</Branding>
 			<ide>IDE</ide>
+			<search>Search</search>
 		</label>
 	</UISetupPlatformToolBarPortlet>
 </bundle>
