--- a/extension/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/group/platform/administrators_en.properties
+++ b/extension/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/group/platform/administrators_en.properties
@@ -31,3 +31,4 @@ administration.servicesManagement=Management
 administration.monitoring=Monitoring
 administration.Branding=Branding
 administration.spaces=Spaces
+administration.search=Search
