--- a/samples/acme-intranet/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/portal/intranet_fr.properties
+++ b/samples/acme-intranet/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/portal/intranet_fr.properties
@@ -19,7 +19,7 @@
 portal.intranet.welcome=Bienvenue
 portal.intranet.myprofile=Mon Profil
 portal.intranet.connections=Mes Connexions
-portal.intranet.people=Annuaire
+portal.intranet.people=Connexions
 portal.intranet.spaces=Espaces
 portal.intranet.home=Accueil
 portal.intranet.register=S'inscrire
