--- a/samples/acme-intranet/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/portal/intranet_en.properties
+++ b/samples/acme-intranet/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/portal/intranet_en.properties
@@ -20,7 +20,7 @@ portal.intranet.home=Home
 portal.intranet.welcome=Welcome
 portal.intranet.myprofile=My Profile
 portal.intranet.connections=My Connections
-portal.intranet.people=People
+portal.intranet.people=Connexions
 portal.intranet.spaces=Spaces
 portal.intranet.home=Home
 portal.intranet.webexplorer=Web Explorer
