--- a/samples/acme-intranet/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/portal/intranet_vi.properties
+++ b/samples/acme-intranet/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/portal/intranet_vi.properties
@@ -18,7 +18,7 @@ portal.intranet.home=HOME
 portal.intranet.welcome=Welcome
 portal.intranet.myprofile=My Profile
 portal.intranet.connections=My Connections
-portal.intranet.people=People
+portal.intranet.people=Connexions
 portal.intranet.spaces=Spaces
 portal.intranet.home=Home
 portal.intranet.webexplorer=Web Explorer
